methods.args.MethodsArgs.scala.error
Erreur de compilation :
MethodsArgs:2: error: ':' expected but ',' found.
def move (nbPas, versLAvant()){
               ^MethodsArgs:10: error: identifier expected but '}' found.
}
^