methods.args.MethodsArgs.scala.code
def move (nbPas, versLAvant()){
  if (versLAvant == true){
    avance(nbPas)
  }else{
    recule(nbPas)
  }
}